--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -116,20 +116,21 @@ body {
   box-shadow: 0px 1px 2px 1px rgb(224, 221, 221);
 }
 
-.custom-search-btn {
-  border: 1px solid grey;
-  padding: 10px;
+.custom-search {
+  // background-color: grey;
   width: 100%;
-  height: 44px;
-  padding-right: 0px;
-  padding-left: 0px;
+  margin-bottom: 17px;
+  margin-top: 4px;
+  border: 0.5px solid $ZameriaAsh;
+  padding: 7px;
+  padding-left: 8px;
 }
 
 #search-btn {
   position: absolute;
-  top: 92px;
+  top: 5px;
   height: 44px;
-  right: 8px;
+  right: 65px;
   z-index: 1;
 }
 
