done search modal like nordstrom

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -6,7 +6,7 @@ $ZameriaOrange: #ff870c;
 $ZameriaBrown: #dab777;
 $ZameriaGrey: #282828;
 $ZameriaAsh: #e2e2e2;
-
+$ZameriaDividerGray: #E4E6E7;
 // Zameria Custom Input Field With The Dark Background
 .zameria-dark-form {
   background-color: $ZameriaAsh;
